[package]
name = "yaxpeax-eval"
version = "0.0.1"
authors = ["iximeow <me@iximeow.net>"]
license = "0BSD"
edition = "2021"
keywords = ["disassembly", "disassembler"]
repository = "https://git.iximeow.net/yaxpeax-eval/about/"
description = "batch eval tool for machine code"
readme = "README.md"

[[bin]]
name = "yaxeval"
path = "src/main.rs"

[dependencies]
nix = { version = "0.26.1", features = ["mman", "process", "ptrace"] }
clap = { version = "3", features = ["derive"] }
hex = "0.4.0"
num-traits = "0.2.10"
itertools = "0.10.1"
libc = "0.2.139"

# common interfaces for all yaxpeax decoders
yaxpeax-arch = { version = "0.2.4" , default-features = false, features = ["std"] }

yaxpeax-x86 = { version = "1.1.5", default-features = false, features = ["fmt", "std"] }
